 * Add breadcrumbs to generic model views (Sage Abdullah)
 * Support passing extra context variables via the `{% component %}` tag (Matt Westcott)
 * Allow subclasses of `PagesAPIViewSet` override default Page model via the `model` attribute (Neeraj Yetheendran, Herbert Poul)
 * Allow `ModelViewSet` to be used with models that have non-integer primary keys (Sage Abdullah)
 * Fix: Ensure that StreamField's `FieldBlock`s correctly set the `required` and `aria-describedby` attributes (Storm Heg)
 * Fix: Avoid an error when the moderation panel (admin dashboard) contains both snippets and private pages (Matt Westcott)
 * Fix: When deleting collections, ensure the collection name is correctly shown in the success message (LB (Ben) Johnston)
 * Fix: Filter out comments on Page editing counts that do not correspond to a valid field / block path on the page such as when a field has been removed (Matt Westcott)
 * Fix: Allow `PublishMenuItem` to more easily support overriding its label via `construct_page_action_menu` (Sébastien Corbin)
 * Fix: Allow locale selection when creating a page at the root level (Sage Abdullah)
 * Fix: Ensure the admin login template correctly displays all `non_fields_errors` for any custom form validation (Sébastien Corbin)
 * Docs: Document `WAGTAILADMIN_BASE_URL` on "Integrating Wagtail into a Django project" page (Shreshth Srivastava)
 * Docs: Replace incorrect screenshot for authors listing on tutorial (Shreshth Srivastava)
 * Docs: Add documentation for building non-model-based choosers using the _queryish_ library (Matt Westcott)
 * Docs: Fix incorrect tag library import on focal points example (Hatim Makki Hoho)
 * Maintenance: Fix snippet search test to work on non-fallback database backends (Matt Westcott)
 * Maintenance: Update Eslint, Prettier, Jest, a11y-dialog, axe-core and js-cookie npm packages (LB (Ben) Johnston)
 * Maintenance: Add npm scripts for TypeScript checks and formatting SCSS files (LB (Ben) Johnston)