@@ -43,6 +43,7 @@ depth: 1
  * Support passing extra context variables via the `{% component %}` tag (Matt Westcott)
  * Allow subclasses of `PagesAPIViewSet` override default Page model via the `model` attribute (Neeraj Yetheendran, Herbert Poul)
  * Allow `ModelViewSet` to be used with models that have non-integer primary keys (Sage Abdullah)
+ * Add the ability to set an external link/text for promoted search result entries (TopDevPros, Brad Busenius)
 
 ### Bug fixes
 
