@@ -27,7 +27,13 @@ class SearchPromotionForm(forms.ModelForm):
 
     class Meta:
         model = SearchPromotion
-        fields = ("query", "page", "description")
+        fields = (
+            "query",
+            "page",
+            "external_link_url",
+            "external_link_text",
+            "description",
+        )
 
         widgets = {
             "description": forms.Textarea(attrs={"rows": 3}),
@@ -67,6 +73,31 @@ class SearchPromotionsFormSet(SearchPromotionsFormSetBase):
         non_empty_forms = 0
         for i in range(0, self.total_form_count()):
             form = self.forms[i]
+
+            page = form.cleaned_data["page"]
+            external_link_url = form.cleaned_data["external_link_url"]
+            external_link_text = form.cleaned_data["external_link_text"]
+
+            # only a page or external_link_url can be supplied
+            if page is None:
+                if external_link_url:
+                    # if an external_link_url then external_link_text is also required
+                    if not external_link_text:
+                        raise forms.ValidationError(
+                            _(
+                                "You must enter an external link text if you enter an external link URL."
+                            )
+                        )
+                else:
+                    raise forms.ValidationError(
+                        _("You must recommend a page OR an external link.")
+                    )
+            else:
+                if external_link_url:
+                    raise forms.ValidationError(
+                        _("Please only select a page OR enter an external link.")
+                    )
+
             if self.can_delete and self._should_delete_form(form):
                 non_deleted_forms -= 1
             if not (form.instance.id is None and not form.has_changed()):
