@@ -9,7 +9,7 @@
         <div class="help-block help-info">
             {% icon name='help' %}
             {% blocktrans trimmed %}
-                <p>Promoted search results are a means of recommending specific pages that might not organically come high up in search results. E.g recommending your primary donation page to a user searching with the less common term "<em>giving</em>".</p>
+                <p>Promoted search results are a means of recommending specific pages or external links that might not organically come high up in search results. E.g recommending your primary donation page to a user searching with the less common term "<em>giving</em>".</p>
             {% endblocktrans %}
 
             {% blocktrans trimmed %}
