@@ -11,7 +11,7 @@
     {# Align with guiding line of the preceding child panel. #}
     <div class="w-mb-4 -w-ml-4">
         <button type="button" class="button button-small button-secondary chooser__choose-button" id="id_{{ formset.prefix }}-ADD" value="Add">
-            {% icon name="plus-inverse" %}{% trans "Add recommended page" %}
+            {% icon name="plus-inverse" %}{% trans "Add a recommended result" %}
         </button>
     </div>
 {% endpanel %}
